Refactor: optimize core feature performance for Amplio
Improved the internal logic of existing features to ensure higher stability and faster response times during operation.

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -3,6 +3,7 @@
   "appTitle": "Amplio",
   "selectTraining": "يرجى اختيار التدريب الذي تريد القيام به",
   "clickToStartTest": "انقر لبدء الاختبار",
+  "clickToStartTraining": "انقر لبدء التدريب",
   "tremorTest": "اختبار رعشة اليد",
   "tremorTestTitle": "اختبار رعشة اليد",
   "tremorTestInstruction": "يرجى حمل الهاتف في يدك والحفاظ على الذراع ثابتة لمدة 30 ثانية",
@@ -20,6 +21,7 @@
   "waitingForData": "في انتظار البيانات...",
   "startTest": "بدء الاختبار",
   "stopTest": "إيقاف الاختبار",
+  "tremorTestCancelledNoSave": "تم إلغاء الاختبار، لم يتم حفظ السجل",
   "testCompleted": "اكتمل الاختبار",
   "averageFrequency": "متوسط التردد: {frequency} هرتز",
   "@averageFrequency": {
@@ -63,6 +65,9 @@
   "russian": "Русский",
   "arabic": "العربية",
   "realtimeWaveform": "الموجة",
+  "waveformAxisTime": "الوقت",
+  "waveformAxisAmplitude": "السعة",
+  "waveformHint": "كلما ارتفعت الموجة زاد وضوح رعشة اليد",
   "tremorSeverity": "الشدة",
   "tremorFrequency": "التردد",
   "avgAmplitude": "متوسط السعة",
