--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -3,6 +3,7 @@
   "appTitle": "Amplio",
   "selectTraining": "Bitte wählen Sie das Training aus, das Sie durchführen möchten",
   "clickToStartTest": "Klicken Sie, um den Test zu starten",
+  "clickToStartTraining": "Klicken Sie, um das Training zu starten",
   "tremorTest": "Handzitter-Test",
   "tremorTestTitle": "Handzitter-Test",
   "tremorTestInstruction": "Bitte halten Sie das Telefon in der Hand und halten Sie den Arm 30 Sekunden lang still",
@@ -20,6 +21,7 @@
   "waitingForData": "Warten auf Daten...",
   "startTest": "Test Starten",
   "stopTest": "Test Stoppen",
+  "tremorTestCancelledNoSave": "Test abgebrochen, Aufzeichnung nicht gespeichert",
   "testCompleted": "Test Abgeschlossen",
   "averageFrequency": "Durchschnittliche Frequenz: {frequency} Hz",
   "@averageFrequency": {
@@ -63,6 +65,9 @@
   "russian": "Русский",
   "arabic": "العربية",
   "realtimeWaveform": "Echtzeit-Welle",
+  "waveformAxisTime": "Zeit",
+  "waveformAxisAmplitude": "Amplitude",
+  "waveformHint": "Höhere Welle = stärkeres Händezittern",
   "tremorSeverity": "Schweregrad",
   "tremorFrequency": "Frequenz",
   "avgAmplitude": "Ø Amplitude",
