--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -3,6 +3,7 @@
   "appTitle": "Amplio",
   "selectTraining": "Veuillez sélectionner l'entraînement que vous souhaitez effectuer",
   "clickToStartTest": "Cliquez pour commencer le test",
+  "clickToStartTraining": "Cliquez pour commencer l'entraînement",
   "tremorTest": "Test de Tremblement de Main",
   "tremorTestTitle": "Test de Tremblement de Main",
   "tremorTestInstruction": "Veuillez tenir le téléphone dans votre main et garder le bras immobile pendant 30 secondes",
@@ -20,6 +21,7 @@
   "waitingForData": "En attente de données...",
   "startTest": "Démarrer le Test",
   "stopTest": "Arrêter le Test",
+  "tremorTestCancelledNoSave": "Test annulé, enregistrement non sauvegardé",
   "testCompleted": "Test Terminé",
   "averageFrequency": "Fréquence Moyenne : {frequency} Hz",
   "@averageFrequency": {
@@ -63,6 +65,9 @@
   "russian": "Русский",
   "arabic": "العربية",
   "realtimeWaveform": "Forme d'Onde",
+  "waveformAxisTime": "Temps",
+  "waveformAxisAmplitude": "Amplitude",
+  "waveformHint": "Onde plus haute = tremblement plus visible",
   "tremorSeverity": "Sévérité",
   "tremorFrequency": "Fréquence",
   "avgAmplitude": "Amp. Moyenne",
