--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -3,6 +3,7 @@
   "appTitle": "Amplio",
   "selectTraining": "Si prega di selezionare l'allenamento che si desidera eseguire",
   "clickToStartTest": "Fai clic per avviare il test",
+  "clickToStartTraining": "Fai clic per avviare l'allenamento",
   "tremorTest": "Test del Tremore della Mano",
   "tremorTestTitle": "Test del Tremore della Mano",
   "tremorTestInstruction": "Si prega di tenere il telefono in mano e mantenere il braccio fermo per 30 secondi",
@@ -20,6 +21,7 @@
   "waitingForData": "In attesa di dati...",
   "startTest": "Avvia Test",
   "stopTest": "Ferma Test",
+  "tremorTestCancelledNoSave": "Test annullato, record non salvato",
   "testCompleted": "Test Completato",
   "averageFrequency": "Frequenza Media: {frequency} Hz",
   "@averageFrequency": {
@@ -63,6 +65,9 @@
   "russian": "Русский",
   "arabic": "العربية",
   "realtimeWaveform": "Forma d'Onda",
+  "waveformAxisTime": "Tempo",
+  "waveformAxisAmplitude": "Ampiezza",
+  "waveformHint": "Onda più alta = tremore più evidente",
   "tremorSeverity": "Gravità",
   "tremorFrequency": "Frequenza",
   "avgAmplitude": "Amp. Media",
