--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -3,6 +3,7 @@
   "appTitle": "Amplio",
   "selectTraining": "実施したいトレーニングを選択してください",
   "clickToStartTest": "クリックしてテストを開始",
+  "clickToStartTraining": "クリックして訓練を開始",
   "tremorTest": "手の震えテスト",
   "tremorTestTitle": "手の震えテスト",
   "tremorTestInstruction": "スマートフォンを手に持ち、30秒間腕を静止させてください",
@@ -20,6 +21,7 @@
   "waitingForData": "データを待っています...",
   "startTest": "テスト開始",
   "stopTest": "テスト停止",
+  "tremorTestCancelledNoSave": "テストを中止しました。記録は保存されません",
   "testCompleted": "テスト完了",
   "averageFrequency": "平均周波数: {frequency} Hz",
   "@averageFrequency": {
@@ -63,6 +65,9 @@
   "russian": "Русский",
   "arabic": "العربية",
   "realtimeWaveform": "リアルタイム波形",
+  "waveformAxisTime": "時間",
+  "waveformAxisAmplitude": "振幅",
+  "waveformHint": "波が高いほど手の震えが目立ちます",
   "tremorSeverity": "重症度",
   "tremorFrequency": "周波数",
   "avgAmplitude": "平均振幅",
