--- a/lib/l10n/app_ko.arb
+++ b/lib/l10n/app_ko.arb
@@ -3,6 +3,7 @@
   "appTitle": "Amplio",
   "selectTraining": "수행하려는 훈련을 선택하세요",
   "clickToStartTest": "테스트 시작을 클릭하세요",
+  "clickToStartTraining": "훈련 시작을 클릭하세요",
   "tremorTest": "손 떨림 테스트",
   "tremorTestTitle": "손 떨림 테스트",
   "tremorTestInstruction": "휴대폰을 손에 들고 30초 동안 팔을 정지 상태로 유지하세요",
@@ -20,6 +21,7 @@
   "waitingForData": "데이터를 기다리는 중...",
   "startTest": "테스트 시작",
   "stopTest": "테스트 중지",
+  "tremorTestCancelledNoSave": "테스트가 취소되었으며 기록되지 않았습니다",
   "testCompleted": "테스트 완료",
   "averageFrequency": "평균 주파수: {frequency} Hz",
   "@averageFrequency": {
@@ -63,6 +65,9 @@
   "russian": "Русский",
   "arabic": "العربية",
   "realtimeWaveform": "실시간 파형",
+  "waveformAxisTime": "시간",
+  "waveformAxisAmplitude": "진폭",
+  "waveformHint": "파형이 높을수록 손 떨림이 더 뚜렷합니다",
   "tremorSeverity": "중증도",
   "tremorFrequency": "주파수",
   "avgAmplitude": "평균 진폭",
