--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -3,6 +3,7 @@
   "appTitle": "Amplio",
   "selectTraining": "Por favor, selecione o treinamento que deseja realizar",
   "clickToStartTest": "Clique para iniciar o teste",
+  "clickToStartTraining": "Clique para iniciar o treino",
   "tremorTest": "Teste de Tremor de Mão",
   "tremorTestTitle": "Teste de Tremor de Mão",
   "tremorTestInstruction": "Por favor, segure o telefone na mão e mantenha o braço parado por 30 segundos",
@@ -20,6 +21,7 @@
   "waitingForData": "Aguardando dados...",
   "startTest": "Iniciar Teste",
   "stopTest": "Parar Teste",
+  "tremorTestCancelledNoSave": "Teste cancelado, registro não salvo",
   "testCompleted": "Teste Concluído",
   "averageFrequency": "Frequência Média: {frequency} Hz",
   "@averageFrequency": {
@@ -63,6 +65,9 @@
   "russian": "Русский",
   "arabic": "العربية",
   "realtimeWaveform": "Forma de Onda",
+  "waveformAxisTime": "Tempo",
+  "waveformAxisAmplitude": "Amplitude",
+  "waveformHint": "Onda mais alta = tremor mais visível",
   "tremorSeverity": "Severidade",
   "tremorFrequency": "Frequência",
   "avgAmplitude": "Amp. Média",
