--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -3,6 +3,7 @@
   "appTitle": "Amplio",
   "selectTraining": "Пожалуйста, выберите упражнение, которое хотите выполнить",
   "clickToStartTest": "Нажмите, чтобы начать тест",
+  "clickToStartTraining": "Нажмите, чтобы начать тренировку",
   "tremorTest": "Тест на Тремор Рук",
   "tremorTestTitle": "Тест на Тремор Рук",
   "tremorTestInstruction": "Пожалуйста, держите телефон в руке и держите руку неподвижно в течение 30 секунд",
@@ -20,6 +21,7 @@
   "waitingForData": "Ожидание данных...",
   "startTest": "Начать Тест",
   "stopTest": "Остановить Тест",
+  "tremorTestCancelledNoSave": "Тест отменён, запись не сохранена",
   "testCompleted": "Тест Завершен",
   "averageFrequency": "Средняя Частота: {frequency} Гц",
   "@averageFrequency": {
@@ -63,6 +65,9 @@
   "russian": "Русский",
   "arabic": "العربية",
   "realtimeWaveform": "Волна",
+  "waveformAxisTime": "Время",
+  "waveformAxisAmplitude": "Амплитуда",
+  "waveformHint": "Чем выше волна — тем заметнее дрожание руки",
   "tremorSeverity": "Тяжесть",
   "tremorFrequency": "Частота",
   "avgAmplitude": "Ср. Ампл.",
