--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -3,6 +3,7 @@
   "appTitle": "Amplio",
   "selectTraining": "请选择您要进行的训练",
   "clickToStartTest": "点击开始测试",
+  "clickToStartTraining": "点击开始训练",
   "tremorTest": "手部震颤测试",
   "tremorTestTitle": "手部震颤测试",
   "tremorTestInstruction": "请将手机握在手中，保持手臂静止30秒",
@@ -20,6 +21,7 @@
   "waitingForData": "等待数据...",
   "startTest": "开始测试",
   "stopTest": "停止测试",
+  "tremorTestCancelledNoSave": "已取消测试，未保存记录",
   "testCompleted": "测试完成",
   "averageFrequency": "平均频率: {frequency} Hz",
   "@averageFrequency": {
@@ -63,6 +65,9 @@
   "russian": "Русский",
   "arabic": "العربية",
   "realtimeWaveform": "实时波形",
+  "waveformAxisTime": "时间",
+  "waveformAxisAmplitude": "振幅",
+  "waveformHint": "波形越高，手部抖动越明显",
   "tremorSeverity": "震颤程度",
   "tremorFrequency": "震颤频率",
   "avgAmplitude": "平均振幅",
