--- a/lib/l10n/app_zh_TW.arb
+++ b/lib/l10n/app_zh_TW.arb
@@ -3,6 +3,7 @@
   "appTitle": "Amplio",
   "selectTraining": "請選擇您要進行的訓練",
   "clickToStartTest": "點擊開始測試",
+  "clickToStartTraining": "點擊開始訓練",
   "tremorTest": "手部顫抖測試",
   "tremorTestTitle": "手部顫抖測試",
   "tremorTestInstruction": "請將手機握在手中，保持手臂靜止30秒",
@@ -20,6 +21,7 @@
   "waitingForData": "等待資料...",
   "startTest": "開始測試",
   "stopTest": "停止測試",
+  "tremorTestCancelledNoSave": "已取消測試，未儲存記錄",
   "testCompleted": "測試完成",
   "averageFrequency": "平均頻率: {frequency} Hz",
   "@averageFrequency": {
@@ -63,6 +65,9 @@
   "russian": "Русский",
   "arabic": "العربية",
   "realtimeWaveform": "即時波形",
+  "waveformAxisTime": "時間",
+  "waveformAxisAmplitude": "振幅",
+  "waveformHint": "波形越高，手部抖動越明顯",
   "tremorSeverity": "顫抖程度",
   "tremorFrequency": "顫抖頻率",
   "avgAmplitude": "平均振幅",
