--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -3,6 +3,7 @@
   "appTitle": "Amplio",
   "selectTraining": "Por favor, seleccione el entrenamiento que desea realizar",
   "clickToStartTest": "Haga clic para comenzar la prueba",
+  "clickToStartTraining": "Haga clic para comenzar el entrenamiento",
   "tremorTest": "Prueba de Temblor de Mano",
   "tremorTestTitle": "Prueba de Temblor de Mano",
   "tremorTestInstruction": "Por favor, sostenga el teléfono en su mano y mantenga el brazo quieto durante 30 segundos",
@@ -20,6 +21,7 @@
   "waitingForData": "Esperando datos...",
   "startTest": "Iniciar Prueba",
   "stopTest": "Detener Prueba",
+  "tremorTestCancelledNoSave": "Prueba cancelada, registro no guardado",
   "testCompleted": "Prueba Completada",
   "averageFrequency": "Frecuencia Promedio: {frequency} Hz",
   "@averageFrequency": {
@@ -63,6 +65,9 @@
   "russian": "Русский",
   "arabic": "العربية",
   "realtimeWaveform": "Forma de Onda",
+  "waveformAxisTime": "Tiempo",
+  "waveformAxisAmplitude": "Amplitud",
+  "waveformHint": "Onda más alta = temblor más notable",
   "tremorSeverity": "Severidad",
   "tremorFrequency": "Frecuencia",
   "avgAmplitude": "Amplitud Media",
